Fixed layout on mobile, added fullscreen and long title protection

--- a/client/src/public/stylesheets/app.styl
+++ b/client/src/public/stylesheets/app.styl
@@ -8,20 +8,20 @@ body
   overflow: hidden
 
 html, body
-  height: 100%
+  height: 100vh
 
 .app
   display: flex
   justify-content: center
   align-items: center
-  min-height: 100%
+  height: 100vh
   background-color: $gray900
 
 .background
   position: absolute
   top: 0
   left: 0
-  height: 100%
+  height: 100vh
   width: 100%
   background-size: cover
   background-position: center
@@ -109,6 +109,8 @@ html, body
     h1
       margin: 0
       padding: 0
+      max-height: 50vh // Hide super long song titles
+      overflow: hidden
       // Title can mess with making the info aligned properly
       margin-top: -0.125em
       padding-bottom: 0.25em
@@ -182,7 +184,7 @@ html, body
   transition: background 100ms, transform 200ms ease-in-out
   -webkit-user-select: none
   user-select: none
-  transform: translateY(6em)
+  transform: translateY(10em)
   &--visible
     transform: translateY(0)
   &:hover
